# EE951

./: CMakeLists.txt  EE951 Linear Algebra.docx  README  README.md  vectors.cpp  vectors_main.cpp
app/: CMakeLists.txt
app/src/: vectors.cpp
app/test/: CMakeLists.txt  vector_operations.hpp  vector_operations_main.cpp
docker/: Dockerfile
inc/: vectors.hpp
test/: CMakeLists.txt  vector_operations.cpp  vector_operations.hpp
